fix: Add close button to remove sliding panes easily on mobile devices

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -280,12 +280,13 @@ li::before {
 }
 
 .confidentialSheet {
-    width: 100%;
+    width: 95%;
     display: flex;
     align-items: center;
     justify-content: center;
     overflow: hidden;
     margin-top: -30px;
+    padding-top: 1rem;
 }
 
 .confidentialSheet::before {
